<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        style="@style/h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/submenu_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                style="@style/h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_airbridge_qa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/submenu_background"
                android:orientation="vertical"
                android:padding="12dp">

                <Button
                    android:id="@+id/setUserIdButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_set_user_id" />

                <Button
                    android:id="@+id/addUserAliasButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_add_user_alias" />

                <Button
                    android:id="@+id/addUserAttributeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_add_user_attribute" />

                <Button
                    android:id="@+id/customEventButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_custom_event" />

            </LinearLayout>

            <TextView
                style="@style/h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/menu_web_view" />

            <Button
                android:id="@+id/showWebViewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_show" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>